kubernetes/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-system
  labels:
    name: healthcare-system
    environment: ${ENVIRONMENT}
